@@ -74,6 +74,10 @@ Rails.application.routes.draw do
   # Notification settings
   resources :notification_settings, only: [:create, :update]
 
+  namespace :slash_commands do
+    post :trigger
+  end
+
   draw :import
   draw :uploads
   draw :explore
