@@ -29,6 +29,7 @@ v 8.13.0 (unreleased)
   - Fix VueJS template tags being rendered in code comments
   - Fix issue with page scrolling to top when closing or pinning sidebar (lukehowell)
   - Add Issue Board API support (andrebsguedes)
+  - Mattermost slash command support
   - Allow the Koding integration to be configured through the API
   - Add new issue button to each list on Issues Board
   - Added soft wrap button to repository file/blob editor
